web_example1/web-example-ingress.yml
# ingress 
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: web01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: web-example1
    http:
      paths:
      - path: /
        backend:
          serviceName: web01
          servicePort: 8080
